--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -39,6 +39,11 @@
    	 <groupId>org.openjfx</groupId>
    	 <artifactId>javafx-controls</artifactId>
    	 <version>11</version>
+		</dependency>
+		<dependency>
+  		<groupId>org.json</groupId>
+  		<artifactId>json</artifactId>
+  		<version>20240303</version>
 		</dependency>
   </dependencies>
 
