--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
   		<artifactId>json</artifactId>
   		<version>20240303</version>
 		</dependency>
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>
   </dependencies>
 
   <build>
