updated pom for cross platform

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,24 @@
 			<artifactId>javatuples</artifactId>
 			<version>1.2</version>
 		</dependency>
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-graphics</artifactId>
+        <version>11</version>
+        <classifier>win</classifier>
+    </dependency>
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-graphics</artifactId>
+        <version>11</version>
+        <classifier>linux</classifier>
+    </dependency>
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-graphics</artifactId>
+        <version>11</version>
+        <classifier>mac</classifier>
+    </dependency>
   </dependencies>
 
   <build>
