--- a/pom.xml
+++ b/pom.xml
@@ -52,24 +52,32 @@
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-graphics</artifactId>
-        <version>11</version>
+        <version>21</version>
         <classifier>win</classifier>
     </dependency>
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-graphics</artifactId>
-        <version>11</version>
+        <version>21</version>
         <classifier>linux</classifier>
     </dependency>
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-graphics</artifactId>
-        <version>11</version>
+        <version>21</version>
         <classifier>mac</classifier>
     </dependency>
   </dependencies>
 
   <build>
+
+     <sourceDirectory>src/main/java</sourceDirectory>
+      <resources>
+          <resource>
+              <directory>src/main/resources</directory>
+          </resource>
+      </resources>
+
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -105,9 +113,9 @@
                                                  "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                 <mainClass>com.tylerspaeth.Main</mainClass>
                             </transformer>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-                                    <resource>src/main/resources</resource>
-                                </transformer>
+                            <!--<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>resources</resource>
+                                </transformer>-->
                         </transformers>
                     </configuration>
                 </execution>
